--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Memory!</title>
+    <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <title>Happy Memory!</title>
 </head>
-<body>
+<body> 
+    <div class="wrapped-container">
+    <div class="button-flex">
+        <p>Click counter: <a id="clicks">0</a></p> 
+        <button type="button" class="start">Reset</button>
+    </div>
+    <h1>🥳 Happy Memory! 🥳</h1>
 
+<section class="memory-container"></section>
+</div>
 
+<div class="replay-message">
+    <h2>🤗 Try again! 🤗</h2>
+</div>
 
-<script src="js/script.js"></script>
+    
+    <script src="js/script.js"></script>
 </body>
 </html>
